ci: add java.lang.reflect open for Groovy 2.5 annotation reflection
Groovy 2.5's CachedClass also reflects on
AnnotatedElement.lambda$getDeclaredAnnotationsByType$0 when computing
annotation metadata. Adding java.lang.reflect to the open set.