@@ -50,6 +50,7 @@ test {
     // moves to Groovy 4.
     jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED',
             '--add-opens=java.base/java.lang.invoke=ALL-UNNAMED',
+            '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED',
             '--add-opens=java.base/java.io=ALL-UNNAMED',
             '--add-opens=java.base/java.net=ALL-UNNAMED',
             '--add-opens=java.base/java.nio=ALL-UNNAMED',
